--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,5 +10,13 @@
   <%= @user.email %>
 </p>
 
+<% if false %>
+<p>
+  <strong>First Micropost:</strong>
+  <%= @user.microposts.first.content %>
+</p>
+<% end %>
+
+
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
